@@ -272,7 +272,6 @@ void LightTableWindow::closeEvent(QCloseEvent* e)
     writeSettings();
 
     DXmlGuiWindow::closeEvent(e);
-    e->accept();
 }
 
 void LightTableWindow::showEvent(QShowEvent*)
